<resources>
    <string name="app_name">ControlTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity__validar_horarios_y_permisos">Activity_ValidarHorariosYPermisos
    </string>
    <string name="title_activity__validar_horario">Activity_ValidarHorario</string>
    <string name="tab_text_1">Horarios</string>
    <string name="tab_text_2">Permisos</string>
    <string name="title_activity__navegador">Activity_Navegador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Fichaje</string>
    <string name="menu_verFichaje">Ver fichajes</string>
    <string name="menu_validar">Validar</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_empleado">Añadir empleados</string>
    <string name="menu_informe">Informes</string>
    <string name="menu_solicitarFichaje">Solicitar fichajes</string>
    <string name="menu_gallery">Permisos</string>
    <string name="menu_cerrarSesion">Cerrar sesión</string>
    <string name="menu_slideshow">Cerrar sesión</string>
    <string name="title_activity_splash">Control Time</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>